<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:background="@color/white"
	android:orientation="vertical" >
	<TableRow>
		<TextView
			style="@style/textstyle"
			android:text="@string/t1" />
		<EditText
			android:id="@+id/e1"
			android:inputType="number"
			style="@style/textstyle" />
	</TableRow>
		<TableRow>
		<TextView
			style="@style/textstyle"
			android:text="@string/t2" />
		<EditText
			android:id="@+id/e2"
			android:inputType="number"
			style="@style/textstyle" />
	</TableRow>
		<TableRow>
		<TextView
			style="@style/textstyle"
			android:text="@string/t3" />
		<EditText
			android:id="@+id/e3"
			android:inputType="numberDecimal"
			style="@style/textstyle" />
	</TableRow>
		<TableRow>
		<TextView
			style="@style/textstyle"
			android:text="@string/t4" />
		<EditText
			android:id="@+id/e4"
			android:inputType="numberDecimal"
			style="@style/textstyle" />
	</TableRow>
		<TableRow>
		<TextView
			style="@style/textstyle"
			android:text="@string/t5" />
		<EditText
			android:id="@+id/e5"
			android:inputType="numberDecimal"
			style="@style/textstyle" />
	</TableRow>
</TableLayout>