<tian.google.DashboardLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_weight="1"
    android:background="#f8f9fe" >
    <!-- News Feed Button -->
    <Button
        android:id="@+id/calc"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_newsfeed"
        android:text="@string/fun_calc" />
    <!-- Friends Button -->
    <Button
        android:id="@+id/history"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_newsfeed"
        android:text="@string/fun_history" />
    <!-- Messages Button -->
    <Button
        android:id="@+id/set"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_newsfeed"
        android:text="@string/fun_set" />
    <!-- Places Button -->
    <Button
        android:id="@+id/tips"
        style="@style/DashboardButton"
        android:drawableTop="@drawable/btn_newsfeed"
        android:text="@string/fun_tips" />
</tian.google.DashboardLayout>